auth and client fix
